profile page new

--- a/Layout/GF/src/app/account/account.component.css
+++ b/Layout/GF/src/app/account/account.component.css
@@ -56,3 +56,8 @@ figure.item.item-event[_ngcontent-c5] figcaption[_ngcontent-c5]{
 .btn-w {
     width: 250px;
 }
+
+[_nghost-c6] {
+    width: 100%;
+}
+
