--- a/Layout/GF/src/app/list/list.component.html
+++ b/Layout/GF/src/app/list/list.component.html
@@ -13,7 +13,7 @@
         <tr class="mb-2" *ngFor="let slide of last_event.slide;">
             <td>{{ slide.date}}</td>
             <td>{{ slide.time}}</td>
-            <td>$0.87</td>
+            <td>Забронировано 25 мест</td>
             <td>
                 <div class="row">
                     <div class="col-lg-6"><i class="material-icons edit">mode_edit</i></div>
