--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -514,6 +514,43 @@ a:hover {
   background-color: transparent;
 }
 
+/*cal items*/
+.ngb-dp-day[_ngcontent-c10], .ngb-dp-weekday[_ngcontent-c10], .ngb-dp-week-number[_ngcontent-c10] {
+  width: 4rem !important;
+}
+
+.ngb-dp-day[_ngcontent-c10] {
+  background: #f8f9fa;
+}
+
+[_nghost-c8] {
+  width: 4rem !important;
+}
+
+[_nghost-c6] {
+  border: none !important;
+}
+
+.ngb-dp-weekdays[_ngcontent-c10] {
+  border: none !important;
+
+}
+
+.ngb-dp-weekday[_ngcontent-c10] {
+  color: #7f7f7f !important;
+}
+
+.font-italic {
+  font-style: normal !important;
+}
+
+.btn-link {
+  color: transparent !important;
+}
+
+.bg-primary {
+  background-color: #53bcb2!important;
+}
 
 /*Large devices (desktops, 992px and up)*/
 @media (max-width: 992px) {
