--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -552,6 +552,9 @@ a:hover {
   background-color: #53bcb2!important;
 }
 
+[_nghost-c8] {
+  border-radius: 0;
+}
 /*Large devices (desktops, 992px and up)*/
 @media (max-width: 992px) {
 
