fixed add event layout

--- a/Layout/GF/src/app/add-event/add-event.component.html
+++ b/Layout/GF/src/app/add-event/add-event.component.html
@@ -1,6 +1,5 @@
 <div class="container mt-5">
-
-  <div class="row d-flex align-items-center flex-wrap">
+  <div class="row">
     <div class="col-sm-4" style="background-color:white;"><b>Язик</b><span style="color: red">&nbsp;*</span></div>
     <div class="col-sm-8" style="background-color:white;">
       <div class="btn-group-toggle" ngbRadioGroup name="radioBasic" [(ngModel)]="model">
@@ -34,10 +33,8 @@
     </div>
   </div>
 
-
+  <div class="row d-flex align-items-center flex-wrap">
     <div class="col-sm-4" style="background-color:white;"><b>Продлжителность:</b></div>
-
-
     <div class="col-sm-8" style="background-color:white;">
       <div class="form-group">
 
@@ -45,11 +42,10 @@
                placeholder=" Укажите продлжителность мероприятия " class=" form-control">
       </div>
     </div>
+  </div>
 
-    <br><br><br>
+  <div class="row d-flex align-items-center flex-wrap">
     <div class="col-sm-4" style="background-color:white;"><b>Частное мероприятие:</b></div>
-
-
     <div class="col-sm-8" style="background-color:white;">
       <label class="switch" style="width: 70px">
         <input type="checkbox">
@@ -90,11 +86,10 @@
         </div>
       </div>
     </div>
+  </div>
 
-
-    <br><br><br>
+  <div class="row d-flex align-items-center flex-wrap">
     <div class="col-sm-4" style="background-color:white;"><b>Груповое мероприятие:</b></div>
-
 
     <div class="col-sm-8" style="background-color:white;">
       <label class="switch" style="width: 70px">
@@ -196,11 +191,10 @@
         </div>
       </div>
     </div>
+  </div>
 
-
-    <br><br><br>
+  <div class="row d-flex align-items-center flex-wrap">
     <div class="col-sm-4" style="background-color:white;"><b>Сборное мероприятие:</b></div>
-
 
     <div class="col-sm-8" style="background-color:white;">
       <label class="switch" style="width: 70px">
@@ -242,8 +236,10 @@
         </div>
       </div>
     </div>
-    <br><br><br>
+  </div>
 
+
+  <div class="row d-flex align-items-center flex-wrap">
     <div class="col-sm-4" style="background-color:white;"><b>Дополнительные услуги:</b></div>
     <div class="col-sm-8" style="background-color:white;">
 
@@ -269,14 +265,17 @@
             class="close  material-icons">highlight_off</i></div>
         </div>
       </div>
-
-
     </div>
+  </div>
+
+  <div class="row d-flex align-items-center flex-wrap">
     <div class="col-sm-4" style="background-color:white;"><b></b></div>
     <div class="col-sm-8" style="background-color:white;"><i class="pluse material-icons">add_circle_outline
       <button type="button" class="pluselink btn btn-link">Добавить дополнителную услугу</button>
     </i></div>
+  </div>
 
+  <div class="row d-flex align-items-center flex-wrap">
     <div class="col-sm-4" style="background-color:white;"><b></b></div>
     <div class="col-sm-8" style="background-color:white;">
 
@@ -298,8 +297,9 @@
 
 
     </div>
-    <br><br><br><br>
+  </div>
 
+  <div class="row d-flex align-items-center flex-wrap">
     <div class="col-sm-4" style="background-color:white;"><b>Тематика:</b></div>
     <div class="col-sm-8" style="background-color:white;">
       <button type="button" style="background-color: white;color: #3fb8af" class="btn btn-info col-sm-4">Обзорная
@@ -309,6 +309,7 @@
         экскурсия
       </button>
     </div>
+  </div>
 
 
     <br><br><br>
@@ -441,8 +442,5 @@
 
       </div>
     </div>
-
-
   </div>
-</div>
 
