account page button

--- a/Layout/GF/src/app/list/list.component.html
+++ b/Layout/GF/src/app/list/list.component.html
@@ -16,8 +16,17 @@
             <td>Забронировано 25 мест</td>
             <td>
                 <div class="row">
-                    <div class="col-lg-6"><i class="material-icons edit">mode_edit</i></div>
-                    <div class="col-lg-6"><i class="material-icons delete">cancel</i></div>
+                    <div class="col-lg-6">
+                        <a href="javascript:void(0)">
+                            <i class="material-icons edit">mode_edit</i>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <a href="javascript:void(0)">
+                            <i class="material-icons delete">cancel</i>
+                        </a>
+                    </div>
                 </div>
             </td>
         </tr>
