--- a/Layout/GF/src/app/account/account.component.html
+++ b/Layout/GF/src/app/account/account.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <div *ngFor="let event of events;">
-        <div class="row mt-5 ">
+        <div class="row">
             <div class="col mt-lg-5 mt-md-5">
                 <h2>{{event.h2}}</h2>
             </div>
