--- a/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
+++ b/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
@@ -42,8 +42,11 @@
               <li class="nav-item">
                 <a class="nav-link" routerLink="/guide">{{menu.guide}}</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item" *ngIf ="!login">
                 <a class="nav-link" href="javascript:void(0)" (click)="openSignInDialog()">{{menu.signin}}</a>
+              </li>
+              <li class="nav-item" *ngIf ="login">
+                <a class="nav-link" href="javascript:void(0)" (click)="openSignInDialog()">fghnmfgh</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0)" (click)="openSignUpDialog()">{{menu.signup}}</a>
